--- a/FUWEB/Frontend/src/app/login/login.component.html
+++ b/FUWEB/Frontend/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-    <h1>Join the Railway Imperium!</h1>
-    <form class="box" [formGroup]="registerForm" (submit)="register()">
+    <h1>Login to Railway Imperium!</h1>
+    <form class="box" [formGroup]="loginForm" (submit)="login()">
         <input type="text" placeholder="USERNAME" formControlName="username">
         <input type="password" placeholder="PASSWORD" formControlName="password">
-        <input  type="submit" value="Register">
+        <input  type="submit" value="Login">
     </form>
 </div>
