--- a/FUWEB/Frontend/src/app/home/home.component.scss
+++ b/FUWEB/Frontend/src/app/home/home.component.scss
@@ -17,7 +17,7 @@ $text-color: #9ddafd;
     flex-direction: column;
     align-items: center;
 
-    input {
+    button {
       border-radius: 15px;
       background-color: $accent-color;
       padding: 10px 20px;
