--- a/FUWEB/Frontend/src/app/my-trains/my-trains.component.html
+++ b/FUWEB/Frontend/src/app/my-trains/my-trains.component.html
@@ -9,7 +9,7 @@
           <th>Starting Asset</th>
           <th>Destination Asset</th>
           <th>Will Return With Goods</th>
-          <th>Goods</th>
+          <th>Good</th>
         </tr>
       </thead>
       <tbody>
