--- a/FUWEB/Frontend/src/app/profile/profile.component.html
+++ b/FUWEB/Frontend/src/app/profile/profile.component.html
@@ -1,5 +1,5 @@
 <aside class="profile">
-      <h2>Your Details</h2>
+      <h2>Your Profile</h2>
       <p><strong>Username:</strong> {{ username }}</p>
       <p><strong>Funds:</strong> ${{ funds }}</p>
 </aside>
