--- a/Android/app/src/main/res/layout/fragment_register.xml
+++ b/Android/app/src/main/res/layout/fragment_register.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="62dp"
-            android:layout_marginTop="31dp"
+            android:layout_marginTop="100dp"
             android:layout_marginEnd="62dp"
             android:text="Join the Railway Imperium!"
             android:textColor="#000000"
@@ -44,9 +44,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="100dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="100dp"
             android:layout_marginBottom="7dp"
             android:ems="10"
+            android:hint="Username"
             android:inputType="text"
             app:layout_constraintBottom_toTopOf="@+id/passwordTextField"
             app:layout_constraintEnd_toEndOf="parent"
@@ -62,6 +64,7 @@
             android:layout_marginEnd="100dp"
             android:layout_marginBottom="11dp"
             android:ems="10"
+            android:hint="Password"
             android:inputType="textPassword"
             app:layout_constraintBottom_toTopOf="@+id/registerationButton"
             app:layout_constraintEnd_toEndOf="parent"
