--- a/Android/app/src/main/res/layout/fragment_login.xml
+++ b/Android/app/src/main/res/layout/fragment_login.xml
@@ -15,11 +15,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="62dp"
-            android:layout_marginTop="31dp"
+            android:layout_marginTop="100dp"
             android:layout_marginEnd="62dp"
+            android:layout_marginBottom="30dp"
             android:text="Login to Railway Imperium!"
             android:textColor="#000000"
             android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/usernameLoginTextField"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -29,9 +31,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="97dp"
-            android:layout_marginTop="14dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="105dp"
             android:ems="10"
+            android:hint="Username"
             android:inputType="text"
             app:layout_constraintBottom_toTopOf="@+id/passwordLoginTextField"
             app:layout_constraintEnd_toEndOf="parent"
@@ -46,6 +49,7 @@
             android:layout_marginEnd="105dp"
             android:layout_marginBottom="6dp"
             android:ems="10"
+            android:hint="Password"
             android:inputType="textPassword"
             app:layout_constraintBottom_toTopOf="@+id/loggininButton"
             app:layout_constraintEnd_toEndOf="parent"
