--- a/Android/app/src/main/res/layout/fragment_create.xml
+++ b/Android/app/src/main/res/layout/fragment_create.xml
@@ -59,10 +59,33 @@
                     android:layout_weight="1" />
             </LinearLayout>
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/returnChip"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView14"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Trains Name:" />
+
+                <EditText
+                    android:id="@+id/trainsNameText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="Trains Name"
+                    android:inputType="text" />
+            </LinearLayout>
+
+            <Switch
+                android:id="@+id/returnSwitch"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Return with item?" />
 
             <Button
                 android:id="@+id/doneCreateButton"
